fix: Remove Sonar Context (for the moment)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ workflows:
   api_build:
     jobs: 
       - build:
-          context: SonarCloud
+#          context: SonarCloud
           filters:
             branches:
               only:
