--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,20 +23,22 @@ jobs:
       - run: 
           name: Run JUnit Tests
           command: gradle test -Dbuild=$CIRCLE_BUILD_NUM
-#      - store_test_results:
-#          path: target
-      - run: mvn clean package -Dbuild=$CIRCLE_BUILD_NUM -Dmaven.test.skip=true
+      - store_test_results:
+          path: build/reports
+      - store_test_results:
+          path: build/test-results
+      - run: gradle assemble -Dbuild=$CIRCLE_BUILD_NUM
       - store_artifacts:
-          path: deploy
+          path: build/libs
       - setup_remote_docker
-      - run: |
-          echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
+#      - run: |
+#          echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
       - run: 
           name: Building Docker Image
           command: docker build -t devist/devist-chat-api:$CIRCLE_BUILD_NUM .
-      - run:
-          name: Publish Docker Image
-          command: docker push devist/devist-chat-api:$CIRCLE_BUILD_NUM
+#      - run:
+#          name: Publish Docker Image
+#          command: docker push devist/devist-chat-api:$CIRCLE_BUILD_NUM
 workflows:
   api_build:
     jobs: 
