--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,9 @@ jobs:
       - store_artifacts:
           path: build/libs
       - setup_remote_docker
-      - run: |
-          echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
+      - run:
+          name: Docker login
+          command: docker login --username $DOCKER_USER --password $DOCKER_PASS
       - run:
           name: Building Docker Image
           command: |
