--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
       - setup_remote_docker
       - run:
           name: Docker login
-          command: docker login --username $DOCKER_USER --password $DOCKER_PASS
+          command: echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
       - run:
           name: Building Docker Image
           command: |
