--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,25 +9,27 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Run JUnit Tests
+          command: gradle test
+      - run:
           name: Analyze on SonarCloud
           command: gradle build sonarqube
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "build.gradle.kts" }}
           - v1-dependencies-
-      - run: gradle build -Dbuild=$CIRCLE_BUILD_NUM
+      - run: gradle build
       - save_cache:
           paths:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle.kts" }}
-      - run: 
-          name: Run JUnit Tests
-          command: gradle test -Dbuild=$CIRCLE_BUILD_NUM
       - store_test_results:
           path: build/reports
       - store_test_results:
           path: build/test-results
-      - run: gradle assemble -Dbuild=$CIRCLE_BUILD_NUM
+      - run:
+         name: Build Artifacts
+         command: gradle assemble
       - store_artifacts:
           path: build/libs
       - setup_remote_docker
@@ -47,7 +49,7 @@ jobs:
             version=$(gradle projectVersion | grep "project-version:" |awk '{print $2}')
             group=$(gradle projectGroup | grep "project-group:" |awk '{print $2}')
             name=$(gradle projectName | grep "project-name:" | awk '{print $2}')
-            docker push -t devistchat/$group.$name:$version .
+            docker push -t devistchat/$group.$name:$version
 workflows:
   api_build:
     jobs: 
