fix: Docker push code fix (2)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
             version=$(gradle projectVersion | grep "project-version:" |awk '{print $2}')
             group=$(gradle projectGroup | grep "project-group:" |awk '{print $2}')
             name=$(gradle projectName | grep "project-name:" | awk '{print $2}')
-            docker push -t devistchat/$group.$name:$version
+            docker push devistchat/$group.$name:$version
 workflows:
   api_build:
     jobs: 
